<resources>
    <string name="app_name">SMS2UK</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="rate_virtual_number">Virtual number cost: £1</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_surname">Surname</string>
    <string name="register_hint_email">E-mail</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_password">Confirm password</string>
    <string name="login_register_button_text">Don\'t have an account?</string>
    <string name="register_button_text">Sign up</string>
    <string name="register_error_empty">Field cannot be empty</string>
    <string name="register_error_email">Field must be a valid e-mail address</string>
    <string name="register_error_password">Passwords given must match</string>

    <string name="text_of_message">text of message</string>
    <string name="number_of_phone">Number of phone</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

    </string>
    <string name="balance">Balance</string>
    <string name="money">10000</string>
    <string name="departure">Departure</string>
    <string name="go_back">Go back</string>
    <string name="rate_sms_rate">SMS Rate: £</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_toast">"Logged in as "</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_restore_password_message">We will send an e-mail containing instruction on how to reset your password to the specified e-mail\n</string>
    <string name="login_restore_password_title">Password reset</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="register_terms_checkbox">You need to agree to</string>
    <string name="register_terms_link">Terms and Conditions</string>
    <string name="icon_user">icon_user</string>
    <string name="virtual_number">Virtual number</string>
    <string name="_044_476_9974809">044-476-9974809</string>
    <string name="_1044">1044$</string>
    <string name="your_balance">Your balance</string>
    <string name="log_out_message">Do you really want to log out?</string>
    <string name="log_out_title">Log out</string>
    <string name="logged_out">You were logged out</string>
    <string name="contact_us_at">Visit our website</string>
    <string name="email_rizapps">romantsisyk1@gmail.com</string>
    <string name="visit_us_at">Visit us at:</string>
    <string name="rizapps_co_uk">rizapps.co.uk</string>
    <string name="email_gsmbilling">info@gsmbilling.co.uk</string>
    <string name="gsmairtime_co_uk">gsmairtime.co.uk</string>
    <string name="message1">Message1</string>
    <string name="get_10_on_you_acount">Get 10$ on you account</string>
    <string name="test_toast">"Everything is ok"</string>
    <string name="for_customer">Have a question or need some help? Don\'t hesitate to contact us.</string>
    <string name="made_by">Made by RizApp for GSM-Billing</string>
    <string name="please_refill_your_account">Please top-up your account</string>
    <string name="your_feedback">Your feedback</string>
    <string name="send">send</string>
    <string name="yours_e_mail">Your e-mail</string>
    <string name="name">Name</string>
    <string name="no_history">You have no message history with this number</string>
    <string name="your_message">Your message:</string>
    <string name="your_free_message"><b>Free messages</b> to SMSHub user:</string>
    <string name="char_counter">0 / 160</string>
    <string name="write_your_message">Write your message</string>
    <string name="please_top_up_your_account">Please top-up your account</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="title_activity_main2">BACK</string>
    <string name="message_list_title">Conversations</string>
    <string name="account_top_up">Top-up your balance</string>
    <string name="account_number">Your virtual number:</string>
    <string name="account_top_up_info">You can choose from £1 up to £15 value.</string>
    <string name="title_activity_tutorial__test_">Tutorial_Test_Activity</string>
    <string name="uk_sms_rate">UK sms rate : <b>£0.03</b></string>
    <string name="chat_histoty">Chat histoty</string>
</resources>
