<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_scr_backgrnd"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/loginActLogoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="SMS 2 UK"
            android:fontFamily="sans-serif-light"
            android:textColor="#1b5265"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/made_by"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#1b5265"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_input_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            >

            <EditText
                android:id="@+id/register_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_name"
                android:inputType="textPersonName|textNoSuggestions|textFilter"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_input_surname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <EditText
                android:id="@+id/register_input_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_surname"
                android:inputType="textPersonName|textNoSuggestions|textFilter"
                android:maxLines="1"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_input_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <EditText
                android:id="@+id/register_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <EditText
                android:id="@+id/register_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="10"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/register_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-light"
                android:buttonTint="@color/btnSupportColorMainPressed"
                android:text="@string/register_terms_checkbox"
                android:textColor="#fff" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_terms_link"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_terms_link"
                android:fontFamily="sans-serif-light"
                android:textColor="#1b5265"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/standart_btn_style"
            android:enabled="false"
            android:text="@string/register_button_text"
            android:textColor="#fff" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>