<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_scr_backgrnd"
        android:padding="15dp">


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginActLogoTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:text="@string/made_by"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLeyout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:theme="@style/ColoredHint"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/login_input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLeyout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLeyout1"
            android:theme="@style/ColoredHint">

            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/edit_field_background_style"
                android:hint="@string/register_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:textColorHint="@color/editFieldHintColor"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLeyout2"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/support_btn_style"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/login_forgot_password"
            android:textColor="#fff"
            android:textSize="12sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-light"
            android:layout_below="@+id/textInputLeyout2"
            android:layout_gravity="right"
            android:layout_marginLeft="30dp"
            android:background="@drawable/standart_btn_style"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/login_sign_in"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/login_register_button"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_register_button_text"
            android:textColor="@color/editFieldColor"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="6dp"
            android:fontFamily="sans-serif-light"
            android:background="@drawable/support_btn_style"
            android:text="create account"
            android:textColor="#fff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/loginActLogoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:text="SMS 2 UK"
            android:fontFamily="cursive"
            android:textColor="@color/colorAccent"
            android:textSize="48sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>